Small fixes to docker files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,5 @@
 FROM node:slim
 
-ARG COMMAND=start
 ARG APPID=5b6368533d84d93971b4a3bd8db47475
 ARG PORT=9000
 
@@ -15,4 +14,4 @@ ENV APPID=${APPID}
 ENV PORT=${PORT}
 
 EXPOSE ${PORT}
-CMD [ "npm", "run", ${COMMAND} ]
+CMD npm run start
