--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:slim
 
+ARG PORT=5000
+
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
@@ -7,9 +9,7 @@ RUN npm install
 COPY . .
 
 ENV NODE_ENV=production
-ENV ENDPOINT=http://${BACKEND_IP}/api
 RUN npm run build
 
-EXPOSE 5000
-
+EXPOSE ${PORT}
 CMD npm run serve
